--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 }
 
 .logo {
-  height: 6em;
+  height: 15em;
+  fill: black;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
